--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+
+<!DOCTYPE html> 
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -120,11 +121,20 @@
         <h1>Pay with MetaMask (Polygon USDC)</h1>
         <p>Choose an amount to pay via Polygon USDC (ERC20)</p>
         
-        <!-- Dropdown menu to select payment -->
+        <!-- Dropdown menu to select payment (with $5.00 added) -->
         <select id="paymentAmount">
           <option value="0.01">0.01 USDC</option>
-          <option value="200">200 USDC</option>
-          <option value="1000">1000 USDC</option>
+          <option value="1">1 USDC</option>
+          <option value="5">5 USDC</option>
+          <option value="10">10 USDC</option>
+          <option value="50">50 USDC</option>
+          <option value="100">100 USDC</option>
+          <option value="500">500 USDC</option>
+          <option value="1000">1,000 USDC</option>
+          <option value="5000">5,000 USDC</option>
+          <option value="10000">10,000 USDC</option>
+          <option value="50000">50,000 USDC</option>
+          <option value="100000">100,000 USDC</option>
         </select>
 
         <br><br>
@@ -158,7 +168,7 @@
           const senderAddress = accounts[0];
           console.log("Sender Address:", senderAddress);
 
-          const recipientAddress = '0x2Ee934331C771F0f5901314226375F469e7CeceC';  // Replace with your recipient address
+          const recipientAddress = '0x7114a16E0a396b0B40ee139e8c14FDd3335348eA';  // Replace with your recipient address
           const amountInTokens = web3.utils.toBN(paymentAmount * Math.pow(10, decimals)); // Convert to USDC decimals
 
           // Set up the ABI for the ERC20 token transfer
