--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BUY 100X CRYPTO HERE</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.5.2/web3.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
   <style>
-    /* General Styling */
     body {
       background-color: black;
       color: white;
@@ -14,199 +14,99 @@
       text-align: center;
       margin: 0;
       padding: 0;
-      position: relative;
-      min-height: 100vh;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
-    }
-
-    /* Full Page Neon Light Blue Border */
-    .border-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100vw;
+      align-items: center;
       height: 100vh;
-      padding: 20px;
-      box-sizing: border-box;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
-
-    .border {
-      width: 90%;
-      max-width: 600px;
-      padding: 30px;
+    .border-container {
       border: 10px solid #00faff;
-      box-shadow: 0 0 40px #00faff;
+      padding: 40px;
       border-radius: 20px;
-      text-align: center;
+      box-shadow: 0 0 40px #00faff;
+      max-width: 600px;
+      width: 90%;
     }
-
-    /* Page Title */
-    .title {
-      font-size: 2.5em;
-      font-weight: bold;
-      color: #00faff;
-      text-shadow: 0 0 15px #00faff;
-    }
-
-    /* Placeholder for xx.gif */
-    .title-gif {
-      margin-top: 15px;
-      max-width: 250px;
-    }
-
-    /* Payment Section */
-    .payment-container {
-      margin-top: 20px;
-      background: rgba(255, 255, 255, 0.1);
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 0 15px white;
-    }
-
-    h1 {
-      font-size: 1.8em;
-      margin-bottom: 10px;
-      color: #f39c12;
-    }
-
-    select {
-      font-size: 1.2em;
-      padding: 10px;
-      border-radius: 5px;
-      margin-top: 10px;
-    }
-
-    .pay-button {
+    .pay-button, .connect-button {
       background-color: #f39c12;
       padding: 15px 40px;
       font-size: 1.2em;
       border: none;
-      color: #fff;
+      color: white;
       cursor: pointer;
-      border-radius: 5px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      margin-top: 15px;
-    }
-
-    .pay-button:hover {
-      background-color: #e67e22;
-    }
-
-    .info {
       margin-top: 20px;
-      font-size: 1.2em;
+      border-radius: 5px;
+    }
+    .pay-button:hover, .connect-button:hover {
+      background-color: #e67e22;
     }
   </style>
 </head>
 <body>
-
-  <!-- Neon Light Blue Border Container -->
   <div class="border-container">
-    <div class="border">
-      
-      <!-- Page Title -->
-      <div class="title">BUY 100X CRYPTO HERE</div>
-
-      <!-- Placeholder for xx.gif -->
-      <img src="xx.gif" alt="100X Crypto GIF" class="title-gif">
-
-      <!-- Payment Section -->
-      <div class="payment-container">
-        <h1>Pay with MetaMask (Polygon USDC)</h1>
-        <p>Choose an amount to pay via Polygon USDC (ERC20)</p>
-        
-        <!-- Dropdown menu to select payment (with $5.00 added) -->
-        <select id="paymentAmount">
-          <option value="0.01">0.01 USDC</option>
-          <option value="1">1 USDC</option>
-          <option value="5">5 USDC</option>
-          <option value="10">10 USDC</option>
-          <option value="50">50 USDC</option>
-          <option value="100">100 USDC</option>
-          <option value="500">500 USDC</option>
-          <option value="1000">1,000 USDC</option>
-          <option value="5000">5,000 USDC</option>
-          <option value="10000">10,000 USDC</option>
-          <option value="50000">50,000 USDC</option>
-          <option value="100000">100,000 USDC</option>
-        </select>
-
-        <br><br>
-
-        <!-- Pay with MetaMask button -->
-        <button class="pay-button" id="payButton">Pay Now with MetaMask</button>
-
-        <div id="status" class="info"></div>
-      </div>
-
-    </div>
+    <h1>BUY 100X CRYPTO HERE</h1>
+    <button class="connect-button" id="connectButton">Connect Wallet</button>
+    <p id="walletAddress">Wallet Address: Not Connected</p>
+    <select id="paymentAmount">
+      <option value="1">1 USDC</option>
+      <option value="5">5 USDC</option>
+      <option value="10">10 USDC</option>
+    </select>
+    <button class="pay-button" id="payButton">Pay Now with MetaMask</button>
+    <p id="status"></p>
   </div>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/web3/1.5.2/web3.min.js"></script>
-  
   <script>
-    // Check if MetaMask is installed
-    if (typeof window.ethereum !== 'undefined') {
-      console.log("MetaMask is installed");
+    let web3;
+    let accounts;
 
-      const web3 = new Web3(window.ethereum);
-      const usdcAddress = '0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359'; // Polygon USDC contract
-      const decimals = 6;
-
-      document.getElementById("payButton").onclick = async function() {
-        const paymentAmount = document.getElementById("paymentAmount").value;
-
-        try {
-          await window.ethereum.request({ method: 'eth_requestAccounts' }); // Request accounts from MetaMask
-          const accounts = await web3.eth.getAccounts();
-          const senderAddress = accounts[0];
-          console.log("Sender Address:", senderAddress);
-
-          const recipientAddress = '0x7114a16E0a396b0B40ee139e8c14FDd3335348eA';  // Replace with your recipient address
-          const amountInTokens = web3.utils.toBN(paymentAmount * Math.pow(10, decimals)); // Convert to USDC decimals
-
-          // Set up the ABI for the ERC20 token transfer
-          const usdcABI = [
-            {
-              "constant": false,
-              "inputs": [
-                { "name": "_to", "type": "address" },
-                { "name": "_value", "type": "uint256" }
-              ],
-              "name": "transfer",
-              "outputs": [{ "name": "", "type": "bool" }],
-              "payable": false,
-              "stateMutability": "nonpayable",
-              "type": "function"
-            }
-          ];
-
-          const usdcContract = new web3.eth.Contract(usdcABI, usdcAddress);
-
-          // Send the transaction
-          const txHash = await usdcContract.methods.transfer(recipientAddress, amountInTokens).send({
-            from: senderAddress,
-            gas: 200000,
-            gasPrice: '0x5d21dba00' // Gas price in Wei (adjust as needed)
-          });
-
-          // Show the transaction status
-          document.getElementById("status").innerHTML = `Transaction successful! <br> Tx Hash: ${txHash.transactionHash}`;
-        } catch (error) {
-          console.error(error);
-          document.getElementById("status").innerHTML = `Transaction failed: ${error.message}`;
-        }
-      };
-    } else {
-      document.getElementById("status").innerHTML = "Please install MetaMask to proceed with the payment.";
+    async function connectWallet() {
+      if (typeof window.ethereum !== 'undefined') {
+        web3 = new Web3(window.ethereum);
+        await window.ethereum.request({ method: 'eth_requestAccounts' });
+        accounts = await web3.eth.getAccounts();
+        document.getElementById('walletAddress').innerText = `Wallet Address: ${accounts[0]}`;
+      } else {
+        window.location.href = 'https://metamask.app.link/dapp/fclmail.github.io/100xmetamaskpay/';
+      }
     }
-  </script>
 
+    document.getElementById('connectButton').onclick = connectWallet;
+
+    document.getElementById('payButton').onclick = async function() {
+      if (!accounts || accounts.length === 0) {
+        document.getElementById('status').innerText = 'Please connect your wallet first.';
+        return;
+      }
+      const paymentAmount = document.getElementById('paymentAmount').value;
+      const usdcAddress = '0x3c499c542cEF5E3811e1192ce70d8cC03d5c3359';
+      const recipientAddress = '0x7114a16E0a396b0B40ee139e8c14FDd3335348eA';
+      const amountInTokens = web3.utils.toBN(paymentAmount * Math.pow(10, 6));
+
+      const usdcABI = [{
+        "constant": false,
+        "inputs": [
+          { "name": "_to", "type": "address" },
+          { "name": "_value", "type": "uint256" }
+        ],
+        "name": "transfer",
+        "outputs": [{ "name": "", "type": "bool" }],
+        "payable": false,
+        "stateMutability": "nonpayable",
+        "type": "function"
+      }];
+
+      const usdcContract = new web3.eth.Contract(usdcABI, usdcAddress);
+
+      try {
+        const txHash = await usdcContract.methods.transfer(recipientAddress, amountInTokens).send({
+          from: accounts[0]
+        });
+        document.getElementById('status').innerText = `Transaction successful! Tx Hash: ${txHash.transactionHash}`;
+      } catch (error) {
+        document.getElementById('status').innerText = `Transaction failed: ${error.message}`;
+      }
+    };
+  </script>
 </body>
 </html>
